# AEye

./: .gitignore  AEye.bat  AEye.command  README.md  README_zh-CN.md  pyproject.toml
.trae/rules/: auto-update-readme.md
aeye/: __init__.py  __main__.py  cli.py  gui.py  i18n.py  launcher.py  runtime.py
aeye.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
example_app/: demo.py
